Modify tests to validate the new mapping of page IDs to positions.